Final polish: removed redundant sentence in Appendix A

--- a/coherism.tex
+++ b/coherism.tex
@@ -859,11 +859,10 @@ The value of Coherism will ultimately be decided by whether it yields concrete, 
 % ======================================================================
 
 % ----------------------------------------------------------------------
-\section{Derivation of \texorpdfstring{$\Theta_{\mu\nu}$}{Theta}}
-\label{appendix:theta}
+\section{Variation of the Coherence Functional}
+\label{appendix:variation}
 % ----------------------------------------------------------------------
 
-In this appendix we outline the formal variation of the coherence functional with respect to the metric $g_{\mu\nu}$ and state $\rho$.
 A full derivation in 3+1D will require a careful treatment of UV divergences and is left to future work; here we sketch the main steps and assumptions.
 
 In this appendix we derive the informational stress tensor $\Tmn$ by varying the coherence functional $\Cfunc[g,\rho;\mu]$ with respect to the metric.
