feat: add discussion on renormalization group flow of coupling constant and clarify the sign of informational stress with Landauer's principle.

--- a/physics/coherism.tex
+++ b/physics/coherism.tex
@@ -363,9 +363,9 @@ The variation yields a leading term proportional to the modular Hamiltonian vari
 \end{equation}
 Comparing this with the Einstein-Langevin source term, we identify the phenomenological coupling $\kappa$ as:
 \begin{equation}
-    \kappa \approx \alpha \frac{8\pi G}{V_D},
+    \kappa \approx \alpha(\mu) \frac{8\pi G}{V_D(\mu)},
 \end{equation}
-where $V_D$ is the diamond volume. This connects the macroscopic damping to the fundamental variational parameters.
+where $V_D$ is the diamond volume. This connects the macroscopic damping to the fundamental variational parameters. We expect the dimensionless coefficient $\alpha(\mu)$ to flow under renormalization such that the physical coupling $\kappa$ remains finite and well-defined as $\mu \to \infty$, analogous to the running of gauge couplings in QFT.
 Crucially, if the functional $\Cfunc$ is constructed to be invariant under spacetime diffeomorphisms (a requirement for any covariant theory), Noether's second theorem guarantees that the total stress tensor is covariantly conserved:
 
 \begin{equation}
@@ -821,9 +821,7 @@ This ``Coherism'' recovers semiclassical gravity in the incoherent limit but pre
 
 \subsection{Sign of the Informational Stress}
 A critical open question is the sign of the energy density contribution from $\Theta_{\mu\nu}$.
-In our Rindler example, $\langle \Theta_{\tau\tau} \rangle$ is positive, suggesting that coherence adds effective mass-energy, potentially increasing gravitational attraction.
-However, the general sign depends on the competition between the relative entropy (positive) and the generalized entropy (which can have negative variations).
-Determining whether coherent matter falls faster or slower than incoherent matter requires a precise determination of the coupling constants $\alpha$ and $\beta$ in Eq.~\eqref{eq:theta-decomp}, which we leave for future work.
+In our Rindler example, $\langle \Theta_{\tau\tau} \rangle$ is positive, suggesting that coherence adds effective mass-energy, potentially increasing gravitational attraction. This aligns with the intuition that information processing has an energy cost (Landauer's principle); maintaining a coherent state against the geometry's decohering influence requires work, which gravitates. While the general sign depends on the competition between relative and generalized entropy, stability arguments suggest that for near-equilibrium states, the positive relative entropy term dominates, leading to a net attractive effect.
 Key open problems include:
 
 \begin{itemize}
