--- a/physics/coherism.tex
+++ b/physics/coherism.tex
@@ -120,7 +120,7 @@ an Einstein-like equation sourced by both $\langle T_{\mu\nu}\rangle$ and an inf
 
 \begin{figure*}[t]
     \centering
-    \begin{tikzpicture}[>=Stealth, node distance=2.4cm]
+    \begin{tikzpicture}[>=Stealth, node distance=4.0cm]
         \node[draw, rounded corners, align=center, minimum width=2.5cm, minimum height=1cm] (geom) {Spacetime\\Geometry $g_{\mu\nu}$};
         \node[draw, rounded corners, right=of geom, align=center, minimum width=2.7cm, minimum height=1cm] (state) {Quantum State\\$\rho$};
         \node[draw, rounded corners, below=1.8cm of $(geom)!0.5!(state)$, align=center, minimum width=3cm, minimum height=1cm] (coh) {Coherence Functional\\$\Cfunc[g,\rho;\mu]$};
@@ -778,6 +778,8 @@ Coherism is compatible with this and can be viewed as adding an informational co
 \emph{Entanglement-based gravity:}
 derivations of linearized Einstein equations from entanglement entropy and the ``first law'' of entanglement motivate the use of relative entropy and generalized entropy.
 Coherism fits naturally into this landscape by elevating these quantities into a variational principle.
+Specifically, our coherence functional $\Cfunc$ can be viewed as an extension of the ``First Law of Entanglement Entropy'' ($\delta S = \delta E$) to non-equilibrium regimes.
+In the context of AdS/CFT, the relative entropy term $\alpha S_{\mathrm{rel}}$ is dual to the canonical energy of the bulk excitation, suggesting that $\Tmn$ may be interpreted as the bulk stress tensor required to support the boundary information geometry.
 
 \emph{Penrose--Diósi collapse:}
 these models connect gravitational self-energy of superpositions to objective collapse of the wavefunction.
